Changed to version sent on Oct 19 by Stefan Hoeche.

--- a/SnowmassStyle/Computing/T4-executiveSummary.tex
+++ b/SnowmassStyle/Computing/T4-executiveSummary.tex
@@ -2,8 +2,8 @@
 \label{chap:PQCD}
 \subsection{Introduction}
 
-One of the main challenges facing the particle-physics community to date
-is the interpretation of LHC measurements on the basis of accurate and
+One of the main challenges facing the particle physics community to date
+is interpreting LHC measurements on the basis of accurate and
 robust theoretical predictions.  The discovery of a Higgs-like
 particle in Summer 2012~\cite{Aad:2012tfa,Chatrchyan:2012ufa} serves
 as a remarkable example of the level of detail and accuracy that must
@@ -15,21 +15,21 @@ determined by quantum effects.  Detailed calculations are therefore
 mandatory, and they will become even more necessary as we further 
 explore the Terascale at the full LHC design energy.
 
-Providing precise theoretical predictions has been a priority of the US 
-theoretical particle-physics community for many years, and has seen an
+Providing precise theoretical predictions has been a priority of the U.S.\ 
+theoretical particle physics community for many years, and has seen an
 unprecedented boost of activity during the last ten years. With the
 aim of extracting evidence of new physics from the data, theorists
 have focused on reducing the systematic uncertainty of their predictions
 by including strong (QCD) and electroweak (EW) effects at higher orders
 in the perturbative expansion. This is particularly important as
-beyond Standard Model effects are expected roughly at the TeV scale. 
+beyond-Standard-Model effects are expected at roughly the TeV scale. 
 Typical decay chains of potential new particles would involve many 
 decay products, several of which can be massive. The SM backgrounds 
 are complex processes which call for highly sophisticated calculational 
 tools in order to provide realistic predictions.
 
-We have reached a time when no conceptual problems stay in
-the way of being able to break Next-to-Leading Order (NLO)
+We have reached a time when no conceptual problems block us
+from being able to break next-to-leading order (NLO)
 perturbative QCD calculations into standard modular steps and automate
 them, making them available to the worldwide LHC community.  It is
 implicit that such an effort will benefit greatly from a unified
@@ -38,15 +38,15 @@ exchanged freely between theorists and experimentalists,
 as well as from the availability of adequate computational means
 for extensive multiple analyses.
 
-We nowadays see the frontier of perturbative
-calculations for collider phenomenology being both in the
-development and optimization of Next-to-Next-to-Leading Order (NNLO)
+We see the frontier of perturbative
+calculations for collider phenomenology being in the
+development and optimization of next-to-next-to-leading order (NNLO)
 QCD calculations, sometimes combined with EW corrections, and in the
 study of more exclusive signatures that requires resummation 
 of logarithmically enhanced higher-order corrections to all orders.
 It is also conceivable that techniques for matching NNLO fixed-order 
 calculations to parton-shower simulations will be constructed in the 
-near to mid-term future. In all cases, the availability 
+next five years. In all cases, the availability 
 of extensive computational resources could be instrumental
 in boosting the exploration of new techniques as well as in
 obtaining very accurate theoretical predictions at a pace and in a
@@ -59,29 +59,27 @@ calculations in a standardized computing environment made available
 by DOE at the National Energy Research Scientific Computing Center
 (NERSC).  Resource requirements were determined for the
 calculation of important background and signal reactions at the
-LHC, including higher order QCD and electroweak (EW) effects. Prototypical results 
+LHC, including higher order QCD and EW effects. Prototypical results 
 are listed in Table~\ref{tab:summary} and have been summarized in a 
 white paper~\cite{HPCWP}.
 
 Different High Performance Computing (HPC) environments were tested
 during this workshop and their suitability for perturbative QCD calculations 
 was assessed. We find that it would be beneficial to make the national HPC 
-facilities ALCF, OLCF, and NERSC
-generally accessible to particle theorists and
-experimentalists in order to enable the use of existing
+facilities ALCF, OLCF, and NERSC accessible to particle theorists and
+experimentalists so they can use existing
 calculational tools for experimental studies involving extensive
 multiple runs without depending on the computer power and manpower
 available to the code authors. Access to these facilities will also
 allow prototyping the next generation of parallel computer programs
 for QCD phenomenology and precision calculations.
 
-The computation of next-to-leading order (NLO) corrections in 
-perturbative QCD has been entirely
+The computation of NLO corrections in perturbative QCD has been entirely
 automated. Resource requirements for NLO calculations determined during 
 this workshop can thus be seen as a baseline that enables phenomenology 
-during the LHC era. Next-to-next-to-leading order (NNLO) calculations are still performed 
+during the LHC era. NNLO calculations are still performed 
 on a case-by-case basis, and their computing needs can only be 
-projected with a large uncertainty. It seems clear, however, that cutting edge 
+projected with a large uncertainty. It seems clear, however, that cutting-edge 
 calculations will require access to leadership class computing facilities.
 
 The use of HPC in perturbative QCD applications is currently in
@@ -89,7 +87,7 @@ an exploratory phase. We expect that the demand for access to HPC
 facilities will continue to grow as more researchers realize the 
 potential of parallel computing in accelerating scientific progress. 
 At the same time, we expect growing demand for educating young researchers 
-in cutting edge computing technology. It would be highly beneficial 
+in cutting-edge computing technology. It would be highly beneficial 
 to provide a series of topical schools and workshops related 
 to HPC in HEP. They may be co-organized with experiments to foster 
 the creation of a knowledge base.
@@ -184,4 +182,6 @@ as well as conventional computing facilities.
 %%%    and assuming cross-checks with at least two independent runs.
 %%%    \label{tab:nlo_merging}}
 %%%\end{table}
+
+
 
