--- a/SnowmassStyle/Computing/E2-executiveSummary.tex
+++ b/SnowmassStyle/Computing/E2-executiveSummary.tex
@@ -4,35 +4,50 @@ Computing for experiments at the Energy Frontier is now dominated by
 the huge data processing and analysis demands for the Large Hadron Collider
 (LHC). The scale of the LHC computing problem has required creating the
 global computing infrastructure of the LHC computing grid, which has been
-hugely successful.  The LHC has driven much of the progress toward the
-usability of a truly distributed computing environment. 
-That environment makes full use of
-networks to connect a tiered system of computing centers at various scales. 
-It also makes use of
-federated storage systems that enable access to and analysis of 
-data sets with hundreds of petabytes. 
-Finally, it allows shared use of the resources by different science groups
-enabling increased overall throughput and productivity.
+hugely successful.  
+%%%The LHC has driven much of the progress toward the
+%%%usability of a truly distributed computing environment. 
+%%%That environment makes full use of
+%%%networks to connect a tiered system of computing centers at various scales. 
+%%%It also makes use of
+%%%federated storage systems that enable access to and analysis of 
+%%%data sets with hundreds of petabytes. 
+%%%Finally, it allows shared use of the resources by different science groups
+%%%enabling increased overall throughput and productivity.
+The requirements of the LHC experiments have driven progress toward a 
+global, distributed computing environment.   In each of the LHC experiments, 
+data samples at the 100 petabyte scale must be accessed by experimenters around 
+the world and shared between different science groups within the overall 
+data analysis organization.  This has been accomplished by developments 
+in networking based on a tiered system of computing centers at various 
+scales. Both data storage and processing are distributed through 
+this hierarchy of centers to maximize useability and throughput.
 
-{\color{red} Lothar can you please rewrite this paragraph, as requested by Julia?}
-Progress in distributed high-throughput computing, in high-performance
-networks, in distributed data management, in remote data access, in work flow
-systems, etc., enables the experiment groups to marshal these diverse and
-distributed resources into coherent systems, for production teams to run
-immense data processing, management, simulation and distribution work flows,
-and for a community of thousands of scientists to perform data analysis.
-Collaboration is an important factor in this success. The Worldwide LHC
-Computing Grid (WLCG)  and national Grid consortia were formed. In the U.S.
-the Open Science Grid is  bringing together sites, experiments, infrastructure
-provider and computing specialists, which is necessary for  sustaining and
+%%%Progress in distributed high-throughput computing, in high-performance
+%%%networks, in distributed data management, in remote data access, in work flow
+%%%systems, etc. enables the experiment groups to marshal these diverse and
+%%%distributed resources into coherent systems, for production teams to run
+%%%immense data processing, management, simulation and distribution work flows,
+%%%and for a community of thousands of scientists to perform data analysis.
+%%%Collaboration is an important factor in this success. 
+Progress in distributed HTC, high-performance networks, distributed data 
+management, remote data access, and work flow systems has helped 
+experiment groups, production teams and scientists worldwide access 
+and use data effectively. Collaboration, facilitated by groups such as 
+the Worldwide LHC Computing Grid (WLCG) and other national consortia, 
+enables this progress.
+In the U.S.  the Open Science Grid is  bringing together sites, 
+experiments, infrastructure
+providers and computing specialists, which is necessary for  sustaining and
 further developing this distributed environment.
 
 Today LHC computing routinely uses 250,000 CPU processor cores and nearly 170
 PB of disk storage in addition to large multi-hundred PB capacity
 tape libraries.  The experiments generate over 1 PB per second of data
 at the detector device level. Triggering and real-time event filtering  is
-used to reduce this by six orders of magnitude, resulting in 1 GB/s of data
-stored permanently. 
+used to reduce this by six orders of magnitude. 
+The upcoming run of LHC experiments will have a final rate to persistent
+storage of around one gigabyte per second. 
 %%%In the case of LHC experiments
 %%%at the start of Run 2 this makes for a final rate to persistent storage of
 %%%around one gigabyte per second. 
@@ -69,8 +84,12 @@ the disk at 34 PB a year on average.  The rough linear increase is the
 combination of three separate periods that average to linear.  The period
 2008 through 2010 covered the procurement ramp for LHC as the scale of the
 available system was tested and commissioned. The period from 2010 to 2013 is
-the first run, where the computing and storage increased at a rate defined
-by the volume of incoming data to be processed and analyzed.
+the first run, 
+%%%where the computing and storage increased at a rate defined
+%%%by the volume of incoming data to be processed and analyzed.
+where the computing and storage needs increased at a rate defined by 
+the volume of incoming data to be processed and analyzed.
+
 The resources needed to accommodate
 the higher trigger rate and event complexity expected in the second run define
 2015.  The three periods roughly average out to a linear increase in
@@ -97,10 +116,9 @@ The Energy Frontier will need to adopt new techniques and methods moving forward
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-{\color{red} Julia suggest changing "Moore's law doubling expectations" to "that predicted by Moore's law".  Not sure if you will like her suggestion.}
 Extrapolating the growth trend out 10 years,  LHC computing would have
-roughly 3 times the computing expected in 2015, which is lower than the
-Moore's law doubling expectations.  LHC would reach nearly 800 PB of disk 
+roughly 3 times the computing expected in 2015, which is lower than that
+predicted by Moore's law.  LHC would reach nearly 800 PB of disk 
 space by
 2023, which again is roughly a factor of 3 greater that predicted for
 2015.   These increases could
@@ -114,7 +132,7 @@ the curve in Figure~\ref{fig:growth}, but would require a significant shift.
 To estimate the increase in resources needed to move from the LHC to the
 HL-LHC, it is instructive to examine the transition from the Tevatron to the
 LHC.  Data rates are about a factor of ten larger for the LHC at the end
-of Run1 than for the Tevatron in 2003.
+of 2013 than for the Tevatron in 2003.
 However,  during that time the total computing
 capacity went up by a factor of thirty, while the disk capacity, the local data
 served, the wide area networking from the host lab, and the inter-site
@@ -136,7 +154,8 @@ for specific types of calculations.  Co-processors have similar potential
 improvement gains, but also increase the diversity and complexity of the
 system, and pose additional programming challenges.  Low-power mobile
 platforms are most interesting when they are combined into massively parallel,
-specialized system in which a single rack {\color{red} box changed to rack} may have the same number of cores as a
+specialized system in which a single rack 
+may have the same number of cores as a
 remote computing center does today.  These systems would be used more like a
 supercomputer and less like a batch farm, which will require new
 expertise in dealing with these more highly interconnected computers.
@@ -174,16 +193,16 @@ and the larger event sizes drive the need for disk-based storage.
 For Energy Frontier discovery physics and searches there is a case for storing all
 potentially interesting events, and then computationally  applying various
 hypotheses to look for new physics.  
-{\color{red} Julia requests rewording of the next sentence.  She send a suggestion in an email.}
-For some searches and many measurements a
+Some searches, and many measurements, may benefit from a
 new approach where much more of the processing and analysis is done with the
-initial data collection and only synthesized output is archived has the
+initial data collection and only synthesized output is archived.
+This approach has the
 potential for preserving physics while reducing the offline processing and
 storage needs.  Already the ALICE experiment is planning to do mostly online
 reconstruction, starting with  the coming running period.   For experiments at
 future Energy Frontier accelerators there will be strong motivations to reconstruct and
 calibrate online and write only constants.
-{\color{red} Julia has question about last two sentences}
+{\color{red} Julia has questions about last two sentences}
 
 We expect a change of mentality, moving away from the approach that higher
 trigger rates are always better, and that all data from  all triggered events
