--- a/SnowmassStyle/Computing/T4-executiveSummary.tex
+++ b/SnowmassStyle/Computing/T4-executiveSummary.tex
@@ -103,6 +103,7 @@ if the OSG were to act as a front-end to the national HPC facilities
 as well as conventional computing facilities.
 
 \begin{table}
+\begin{center}
   \begin{tabular}{ccc}
     \hline
     Type of calculation & CPU hours per project & projects per year \\
@@ -115,6 +116,7 @@ as well as conventional computing facilities.
     Parton Distributions & $\sim$ 50,000 & 5-6\\
     \hline
   \end{tabular}
+\end{center}
   \caption{Summary of computing requirements for typical projects
     carried out by the US community~\cite{HPCWP}.
     \label{tab:summary}}
