some small changes

--- a/SnowmassStyle/Computing/wgreport.tex
+++ b/SnowmassStyle/Computing/wgreport.tex
@@ -1,5 +1,6 @@
 %%%%%% Computing Chapter  %%%%%%%%%%%%%%%%
  
+\setcounter{chapter}{8}
 \chapter{Computing Frontier} 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -9,6 +10,9 @@
 \begin{center}\begin{boldmath}
 
 \input Computing/authorlist.tex
+\begin{center}
+Draft version: October 30, 2013
+\end{center}
 %Conveners are also listed separately in authorlist.tex
 
 \end{boldmath}\end{center}
