--- a/SnowmassStyle/Computing/authorlist.tex
+++ b/SnowmassStyle/Computing/authorlist.tex
@@ -1,51 +1,77 @@
-% list of HSPAW authors
+% list of Computing Frontier authors
 
 %\hyphenpenalty 10000
 
 \begin{center}
 
-\begin{large} {Computing Frontier Conveners: L. A. T. Bauerdick (Fermilab), S. Gottlieb (Indiana);
+\begin{large} {\bf Conveners: L.A.T. Bauerdick and S. Gottlieb (Indiana)}\end{large}
 
-Cosmic Frontier, Astrophysics and Cosmology Sub-Group Conveners:
-Alex Szalay (Johns Hopkins), Salman Habib (Chicago), Anthony Mezzacappa (ORNL); 
-Observers: Andrew Connolly (U Washington), George Fuller (UCSD)
+G. Bell,
+K. Bloom,
+T. Blum,
+D. Brown,
+M. Butler,
+A. Connolly,
+E. Cormier,
+P. Elmer,
+M. Ernst,
+I. Fisk,
+G. Fuller,
+R. Gerber,
+S. Habib,
+M. Hildreth,
+S. Hoeche,
+D. Holmgren,
+C. Joshi,
+A. Mezzacappa,
+R. Mount,
+R. Pordes,
+B. Rebel,
+L. Reina,
+M. Sanchez,
+J. Shank,
+P. Spentzouris,
+A. Szalay,
+R. Van de Water,
+M. Wobisch,
+S. Wolbers
 
-Energy Frontier Sub-Group Conveners: 
-Ian Fisk (Fermilab), Jim Shank (Boston University);
-
-Intensity Frontier Sub-Group Conveners: 
-Brian Rebel (Fermilab), Mayly Sanchez (Iowa State);
-Observer: Stephen Wolbers (Fermilab)
-
-Accelerator Science Sub-Group Conveners: 
-Estelle Cormier (Tech-X), Panagiotis Spentzouris (FNAL); 
-Observer: Chan Joshi (UCLA)
-
-Lattice Field Theory Sub-Group Conveners: 
-Thomas Blum (UConn), Ruth Van de Water (FNAL); 
-Observer Don Holmgren (FNAL);
-
-Perturbative QCD Sub-Group Conveners: 
-Stefan Hoeche (SLAC), Laura Reina (FSU); 
-Observer Markus Wobisch (Louisiana Tech);
-
-Distributed Computing and Facility Infrastructures Sub-Group Conveners: 
-Ken Bloom (U.Nebraska/Lincoln), Richard Gerber (NERSC/LBNL)
-
-Networking Sub-Group Conveners: 
-Gregory Bell (LBNL), Michael Ernst (BNL);
-
-Software Development, Personnel, Training Sub-Group Conveners: 
-David Brown (LBL), Peter Elmer (Princeton U.);
-Observer: Ruth Pordes (Fermilab);
-
-Data Management and Storage Sub-Group Conveners: 
-Michelle Butler (NCSA) Richard Mount (SLAC); 
-Observer: Mike Hildreth (Notre Dame U.)
-
-} \end{large}
-
- 
+%%%Cosmic Frontier, Astrophysics and Cosmology Sub-Group Conveners:
+%%%Alex Szalay (Johns Hopkins), Salman Habib (Chicago), Anthony Mezzacappa (ORNL); 
+%%%Observers: Andrew Connolly (U Washington), George Fuller (UCSD)
+%%%
+%%%Energy Frontier Sub-Group Conveners: 
+%%%Ian Fisk (Fermilab), Jim Shank (Boston University);
+%%%
+%%%Intensity Frontier Sub-Group Conveners: 
+%%%Brian Rebel (Fermilab), Mayly Sanchez (Iowa State);
+%%%Observer: Stephen Wolbers (Fermilab)
+%%%
+%%%Accelerator Science Sub-Group Conveners: 
+%%%Estelle Cormier (Tech-X), Panagiotis Spentzouris (FNAL); 
+%%%Observer: Chan Joshi (UCLA)
+%%%
+%%%Lattice Field Theory Sub-Group Conveners: 
+%%%Thomas Blum (UConn), Ruth Van de Water (FNAL); 
+%%%Observer Don Holmgren (FNAL);
+%%%
+%%%Perturbative QCD Sub-Group Conveners: 
+%%%Stefan Hoeche (SLAC), Laura Reina (FSU); 
+%%%Observer Markus Wobisch (Louisiana Tech);
+%%%
+%%%Distributed Computing and Facility Infrastructures Sub-Group Conveners: 
+%%%Ken Bloom (U.Nebraska/Lincoln), Richard Gerber (NERSC/LBNL)
+%%%
+%%%Networking Sub-Group Conveners: 
+%%%Gregory Bell (LBNL), Michael Ernst (BNL);
+%%%
+%%%Software Development, Personnel, Training Sub-Group Conveners: 
+%%%David Brown (LBL), Peter Elmer (Princeton U.);
+%%%Observer: Ruth Pordes (Fermilab);
+%%%
+%%%Data Management and Storage Sub-Group Conveners: 
+%%%Michelle Butler (NCSA) Richard Mount (SLAC); 
+%%%Observer: Mike Hildreth (Notre Dame U.)
 
 \end{center}
 
